package domain.model;

public class Client extends User {

    public Client(String locId, String userId, double lat, double lng) {
        super(locId, userId, lat, lng);
    }

}
