package domain.model;

public class Producer extends User {

    public Producer(String locId, String userId, double lat, double lng) {
        super(locId, userId, lat, lng);
    }

}
